Added Jenkins and Testing